iptables/rules.v4
# Generated by iptables-save v1.6.0 on Thu Dec  6 02:36:56 2018
*filter
:INPUT DROP [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 5201 -j ACCEPT
-A INPUT -p udp -m udp --dport 5201 -j ACCEPT
-A INPUT -p udp -m udp --dport 30664 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 59168 -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
COMMIT
# Completed on Thu Dec  6 02:36:56 2018
